АРМ: убрана анимация для аккордиона
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6590 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-arm/share/src/main/webapp/css/lecm-arm/lecm-arm-documents.css
+++ b/lecm-arm/share/src/main/webapp/css/lecm-arm/lecm-arm-documents.css
@@ -65,3 +65,6 @@ div.arm-tree-menu .arm-accordion div.accordion-content {
 	overflow-x: auto;
 	padding-left: 10px;
 }
+div.arm-tree-menu .arm-accordion div.accordion-content.shown {
+	height: auto;
+}
