--- a/lecm-arm/share/src/main/webapp/css/lecm-arm/lecm-arm-documents.css
+++ b/lecm-arm/share/src/main/webapp/css/lecm-arm/lecm-arm-documents.css
@@ -42,6 +42,12 @@
     padding-left: 24px;
 }
 
+.datalist-toolbar .filters span.first-child button,
+.datalist-toolbar .group-actions span.first-child button {
+    width: 180px;
+	text-align: left;
+}
+
 div.arm-tree-menu .arm-accordion div.accordion-head {
 	cursor: pointer;
 	background: url('/share/res/images/lecm-arm/accordion_button.png') repeat-x;
