--- a/lecm-arm/share/src/main/webapp/css/lecm-arm/lecm-arm-documents.css
+++ b/lecm-arm/share/src/main/webapp/css/lecm-arm/lecm-arm-documents.css
@@ -1,10 +1,9 @@
-
-#bd #lecm-content-main #arm-with-tree {
-    margin: 5px;
-}
-
 #bd #lecm-content-main #arm-tree {
     margin: 0 5px;
+}
+
+#yui-main #arm-with-tree #yui-main-2 .datalist-toolbar {
+	margin: 0 -5px 0 -10px;
 }
 
 #yui-main .arm-filters-bar .datalist-toolbar {
@@ -46,6 +45,10 @@
 .datalist-toolbar .group-actions span.first-child button {
     width: 180px;
 	text-align: left;
+}
+
+div.arm-tree-menu .arm-accordion {
+	padding-top: 0.5em;
 }
 
 div.arm-tree-menu .arm-accordion div.accordion-head {
