ALF-1930: Дизайнбаг АРМ. Выбор фильтра
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6600 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-arm/share/src/main/webapp/css/lecm-arm/lecm-arm-documents.css
+++ b/lecm-arm/share/src/main/webapp/css/lecm-arm/lecm-arm-documents.css
@@ -77,3 +77,40 @@ div.arm-tree-menu .arm-accordion div.accordion-content {
 div.arm-tree-menu .arm-accordion div.accordion-content.shown {
 	height: auto;
 }
+
+#filtersBlock .filters-table-container {
+	overflow-x: auto;
+	padding: 0.5em;
+}
+
+#filtersBlock .filters-table th {
+	width: 150px;
+	min-width: 150px;
+	max-width: 150px;
+	vertical-align: text-top;
+	white-space: nowrap;
+	overflow-x: hidden;
+	text-overflow: ellipsis;
+}
+
+#filtersBlock .filters-table td {
+	width: 150px;
+	min-width: 150px;
+	max-width: 150px;
+	vertical-align: text-top;
+}
+
+#filtersBlock .filters-table td div {
+	white-space: nowrap;
+	overflow-x: hidden;
+	text-overflow: ellipsis;
+}
+
+#filtersBlock .filters-table td div {
+	height: 18px;
+}
+
+#filtersBlock .filters-table td div input,
+#filtersBlock .filters-table td div label {
+	vertical-align: middle;
+}
