ALF-1943: Отображение связанных документов в АРМе
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6611 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-arm/share/src/main/webapp/css/lecm-arm/lecm-arm-documents.css
+++ b/lecm-arm/share/src/main/webapp/css/lecm-arm/lecm-arm-documents.css
@@ -114,3 +114,7 @@ div.arm-tree-menu .arm-accordion div.accordion-content.shown {
 #filtersBlock .filters-table td div label {
 	vertical-align: middle;
 }
+
+.yui-skin-lecmTheme .datagrid .grid.yui-dt table .expand-row .arm-connections-table {
+	margin-left: 50px;
+}
