ALF-1944: АРМ. Отчеты
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6623 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-arm/share/src/main/webapp/css/lecm-arm/lecm-arm-documents.css
+++ b/lecm-arm/share/src/main/webapp/css/lecm-arm/lecm-arm-documents.css
@@ -118,3 +118,7 @@ div.arm-tree-menu .arm-accordion div.accordion-content.shown {
 .yui-skin-lecmTheme .datagrid .grid.yui-dt table .expand-row .arm-connections-table {
 	margin-left: 50px;
 }
+
+.arm-reports-list {
+	margin: 15px;
+}
