--- a/lecm-arm/share/src/main/webapp/css/lecm-arm/lecm-arm-documents.css
+++ b/lecm-arm/share/src/main/webapp/css/lecm-arm/lecm-arm-documents.css
@@ -6,6 +6,10 @@
 	margin: 0 -5px 0 -10px;
 }
 
+#yui-main #arm-with-tree #yui-main-2 .arm-filters-bar .datalist-toolbar {
+	margin: 0;
+}
+
 #yui-main .arm-filters-bar .datalist-toolbar {
 	background-color: #ffffcc;
 	border: 1px solid #797979;
@@ -78,12 +82,44 @@ div.arm-tree-menu .arm-accordion div.accordion-content.shown {
 	height: auto;
 }
 
-#filtersBlock .filters-table-container {
+.filters-block .filters-dialog {
+	z-index: 2;
+	position: absolute;
+	visibility: hidden;
+	background-color: #ffffff;
+	border: 1px solid #999999;
+	margin-top: 30px;
+	margin-left: 10px;
+}
+
+.filters-block .filters-dialog .filters-dialog-content {
+	clear: both;
+}
+
+.filters-block .filters-dialog .filters-dialog-buttons {
+	display: block;
+	padding: 0.3em 0;
+	width: 100%;
+	clear: both;
+	/*height: 40px;*/
+	text-align: right;
+	border-top: 1px solid #999999;
+}
+
+.filters-block .filters-dialog .filters-dialog-buttons .yui-button {
+	margin-right: 0.3em;
+}
+
+.datalist-toolbar .filters-block .filters-dialog div {
+	float: none;
+}
+
+.filters-block .filters-dialog .filters-table-container {
 	overflow-x: auto;
-	padding: 0.5em;
+	padding: 0;
 }
 
-#filtersBlock .filters-table th {
+.filters-block .filters-dialog .filters-table th {
 	width: 150px;
 	min-width: 150px;
 	max-width: 150px;
@@ -91,27 +127,42 @@ div.arm-tree-menu .arm-accordion div.accordion-content.shown {
 	white-space: nowrap;
 	overflow-x: hidden;
 	text-overflow: ellipsis;
+	background-color: #F2F2F2;
+	padding-left: 0.5em;
+	padding-top: 0.3em;
+	border-left: 1px solid #999999;
+	border-right: 1px solid #999999;
 }
 
-#filtersBlock .filters-table td {
+.filters-block .filters-dialog .filters-table td {
 	width: 150px;
 	min-width: 150px;
 	max-width: 150px;
 	vertical-align: text-top;
+	background-color: #F2F2F2;
+	padding-left: 0.5em;
+	border-left: 1px solid #999999;
+	border-right: 1px solid #999999;
 }
 
-#filtersBlock .filters-table td div {
+.filters-block .filters-dialog .filters-table th.colored,
+.filters-block .filters-dialog .filters-table td.colored {
+	background-color: #E4E4E4;
+	border: 0;
+}
+
+.filters-block .filters-dialog .filters-table td div {
 	white-space: nowrap;
 	overflow-x: hidden;
 	text-overflow: ellipsis;
 }
 
-#filtersBlock .filters-table td div {
+.filters-block .filters-dialog .filters-table td div {
 	height: 20px;
 }
 
-#filtersBlock .filters-table td div input,
-#filtersBlock .filters-table td div label {
+.filters-block .filters-dialog .filters-table td div input,
+.filters-block .filters-dialog .filters-table td div label {
 	vertical-align: middle;
 }
 
