Добавлен Bubbling-деструктор и валидация allowedNodes в контрол бизнес-процессов. Переименован контрол.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6641 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -2678,3 +2678,7 @@ div.form-field table.formFieldControlParamsTable {
 	font-size: 22px;
 	text-align: center !important;
 }
+
+.workflow-list-control-container .yuimenu ul {
+	background-color: #fff;
+}
