АРМ: индикатор загрузки для аккордиона
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6643 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-arm/share/src/main/webapp/css/lecm-arm/lecm-arm-documents.css
+++ b/lecm-arm/share/src/main/webapp/css/lecm-arm/lecm-arm-documents.css
@@ -81,6 +81,9 @@ div.arm-tree-menu .arm-accordion div.accordion-content {
 div.arm-tree-menu .arm-accordion div.accordion-content.shown {
 	height: auto;
 }
+div.arm-tree-menu .arm-accordion .wait-container {
+	text-align: center;
+}
 
 .filters-block .filters-dialog {
 	z-index: 2;
