[+] ALF-1907. Групповые операции. Обработка ошибок выполнения операций, переход по результату операции, открытие нового окна оп результату операции.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6648 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-arm/share/src/main/webapp/css/lecm-arm/lecm-arm-documents.css
+++ b/lecm-arm/share/src/main/webapp/css/lecm-arm/lecm-arm-documents.css
@@ -176,3 +176,18 @@ div.arm-tree-menu .arm-accordion .wait-container {
 .arm-reports-list {
 	margin: 15px;
 }
+
+div.noerror-item
+{
+    background: url('/share/res/images/lecm-arm/noerror.png') no-repeat 0 0;
+    padding: 0 0 10px 20px;
+    text-align: left;
+}
+
+div.error-item
+{
+    background: url('/share/res/images/lecm-arm/error.png') no-repeat 0 0;
+    padding: 0 0 10px 20px;
+    text-align: left;
+}
+
