ALF-1960: Отсутствует всплывающая подсказка на счетчике АРМа
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6662 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-arm/share/src/main/webapp/css/lecm-arm/lecm-arm-documents.css
+++ b/lecm-arm/share/src/main/webapp/css/lecm-arm/lecm-arm-documents.css
@@ -67,10 +67,13 @@ div.arm-tree-menu .arm-accordion div.accordion-head {
 div.arm-tree-menu .arm-accordion div.accordion-head.shown {
 	cursor: auto;
 }
-div.arm-tree-menu .arm-accordion div.accordion-head span {
+div.arm-tree-menu .arm-accordion div.accordion-head span.accordion-label {
 	position: absolute;
 	margin-left: 10px;
 	margin-top: 6px;
+}
+div.arm-tree-menu .arm-accordion span.accordion-counter-label {
+	margin-left: 5px;
 }
 div.arm-tree-menu .arm-accordion div.accordion-content {
 	height: 0;
