[ALF-1933] рамка рисовалась хромом. Добавил стиль, чтобы работало со всем полями.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6673 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -6,6 +6,13 @@ a, a:focus,
 button, button:focus {
     outline: none;
 }
+input:focus,
+textarea:focus,
+select:focus {
+    outline: none !important;
+    border-color: #1986DD !important;
+    box-shadow: 0 0 10px #1986DD !important;
+}
 ul, ul li,
 ol, ol li {
     margin: 0;
