--- a/lecm-documents/share/src/main/webapp/css/components/document-metadata-form-edit.css
+++ b/lecm-documents/share/src/main/webapp/css/components/document-metadata-form-edit.css
@@ -9,7 +9,7 @@
     padding-right: 0;
 }
 .yui-skin-lecmTheme .yui-panel.metadata-form-edit div.form-field > label,
-.yui-skin-lecmTheme .yui-panel div.form-field div.viewmode-field span.viewmode-label {
+.yui-skin-lecmTheme .yui-panel.metadata-form-edit div.form-field div.viewmode-field span.viewmode-label {
     width: 190px;
     padding-right: 10px;
     text-align: right;
