--- a/lecm-contracts/repo/src/main/config/reportdefinitions/deploy/approval-list/approval-list.jrxml
+++ b/lecm-contracts/repo/src/main/config/reportdefinitions/deploy/approval-list/approval-list.jrxml
@@ -23,7 +23,7 @@
 		<defaultValueExpression><![CDATA[false]]></defaultValueExpression>
 	</parameter>
 	<parameter name="CMIS_QUERY" class="java.lang.String">
-		<defaultValueExpression><![CDATA["select * from lecm-al:approval-list as approvals"]]></defaultValueExpression>
+		<defaultValueExpression><![CDATA["select * from lecmApprovalResult:approvalResultList as approvals"]]></defaultValueExpression>
 	</parameter>
 	<parameter name="CMIS_XMLCONFIG" class="java.lang.String">
 		<defaultValueExpression><![CDATA["ds-approval-list.xml"]]></defaultValueExpression>
