--- a/lecm-base/share/src/main/webapp/css/lecm-base/components/toolbar.css
+++ b/lecm-base/share/src/main/webapp/css/lecm-base/components/toolbar.css
@@ -28,6 +28,11 @@
     background: url("/share/res/components/images/delete-disabled-16.png") no-repeat scroll 0 0 transparent;
     padding-right: 16px;
 }
+.datalist-toolbar .import-xml span.first-child
+{
+	background: url(/share/images/lecm-dictionary/xml-file-16.png) no-repeat 12px 4px;
+	padding-left: 24px;
+}
 .datalist-toolbar .search-input {
     display: inline-block;
     vertical-align: text-bottom;
@@ -41,4 +46,5 @@
     border: 0;
     outline: none;
     padding-right: 0;
+	margin-bottom: 1px;
 }
